Added Facebook Login Example
I used fake facebook credentials so test will be failed

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>jbehaveexmaple</groupId>
-	<artifactId>jbehavehelloworld</artifactId>
+	<artifactId>jbehave-practice-automation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jbehavehelloworld</name>
+	<name>jbehave-practice-automation</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
